Add intro content

--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
         <title>WoW Quiz</title>
     </head>
     <body>
+        <div class="container">
+            <div id="quiz-area">
+                <div id="title">
+                    <div class="col">
+                        <h1 class="text-center">How well do you know World of Warcraft?</h1><br />
+                    </div>
+                </div>
+                <div id="question-area">
 
+                    <div id="intro-area" class="justify-content-center mx-auto">
+                        <h2 class="text-center">Find out how much you know about WoW</h2><br /><br />
+                        <p class="text-center">Answer the questions to find out how much of a WoW aficionado you are!</p><br /><br />
+                        <input type="button" value="Start Quiz" class="btn btn-success text-center" onclick="startQuiz()"/>
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
