--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                         <form id="quiz-form" class="mx-auto">
                             <!--Question 1-->
-                            <div id="question1" class="mx-auto">
+                            <div id="question1" class="mx-auto question">
                                 <div class="row justify-content-center">
                                     <h2 class="text-center">Which of these creatures are native to the Elwynn Forest?</h2>
                                 </div>
@@ -55,7 +55,7 @@
                             </div>
 
                             <!--Question 2-->
-                            <div id="question2" class="mx-auto">
+                            <div id="question2" class="mx-auto question">
                                 <div class="row justify-content-center">
                                     <h2 class="text-center">Which of these symbols are used to express that a quest is available?</h2>
                                 </div>
@@ -84,7 +84,7 @@
                             </div>
 
                             <!--Question 3-->
-                            <div id="question3" class="mx-auto">
+                            <div id="question3" class="mx-auto question">
                                 <div class="row justify-content-center">
                                     <h2 class="text-center">What was the name of the steed which served, in both life and death, as the personal mount of Arthas Menethil?</h2>
                                 </div>
@@ -113,7 +113,7 @@
                             </div>
 
                             <!--Question 4-->
-                            <div id="question4" class="mx-auto">
+                            <div id="question4" class="mx-auto question">
                                 <div class="row justify-content-center">
                                     <h2 class="text-center">Which of these social characteristics best describe the Tauren society?</h2>
                                 </div>
@@ -142,7 +142,7 @@
                             </div>
 
                             <!--Question 5-->
-                            <div id="question5" class="mx-auto">
+                            <div id="question5" class="mx-auto question">
                                 <div class="row justify-content-center">
                                     <h2 class="text-center">On which cardinal side of Azeroth's world map is the continent named Kalimdor located?</h2>
                                 </div>
@@ -171,7 +171,7 @@
                             </div>
 
                             <!--Question 6-->
-                            <div id="question6" class="mx-auto">
+                            <div id="question6" class="mx-auto question">
                                 <div class="row justify-content-center">
                                     <h2 class="text-center">Which of these dreadlords were responsible for turning Arthas Menethil into the darkness?</h2>
                                 </div>
@@ -200,7 +200,7 @@
                             </div>
 
                             <!--Question 7-->
-                            <div id="question7" class="mx-auto">
+                            <div id="question7" class="mx-auto question">
                                 <div class="row justify-content-center">
                                     <h2 class="text-center">Which of these names have never been used for a World of Warcraft expansion?</h2>
                                 </div>
@@ -229,7 +229,7 @@
                             </div>
 
                             <!--Question 8-->
-                            <div id="question8" class="mx-auto">
+                            <div id="question8" class="mx-auto question">
                                 <div class="row justify-content-center">
                                     <h2 class="text-center">Which of these professions do not exist in the game?</h2>
                                 </div>
@@ -258,7 +258,7 @@
                             </div>
 
                             <!--Question 9-->
-                            <div id="question9" class="mx-auto">
+                            <div id="question9" class="mx-auto question">
                                 <div class="row justify-content-center">
                                     <h2 class="text-center">Which of these chemical elements from the periodic table are not used in-game as part of the three base monetary units?</h2>
                                 </div>
@@ -287,7 +287,7 @@
                             </div>
 
                             <!--Question 10-->
-                            <div id="question10" class="mx-auto">
+                            <div id="question10" class="mx-auto question">
                                 <div class="row justify-content-center">
                                     <h2 class="text-center">What is the name of the item used to teleport to the location of a designated innkeeper?</h2>
                                 </div>
@@ -314,8 +314,14 @@
                                     <input type="button" value="Next"class="btn btn-success mx-auto" onclick="results()"/>
                                 </div>
                             </div>
-
                         </form>
+
+                        <!--Results-->
+                        <div id="results" class="justify-content-center mx-auto">
+                            <h2 class="text-center">You are a </h2>
+                            <br /><br />
+                            <p class="text-center" id="result"></p>
+                        </div>
                     </div>
                 </div>
             </div>
