--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <h2 class="text-center">Find out how much you know about WoW</h2><br /><br />
                         <p class="text-center">Answer the questions to find out how much of a WoW aficionado you are!</p><br /><br />
                         <input type="button" value="Start Quiz" class="btn btn-success text-center" onclick="startQuiz()"/>
-
+                    </div>
                         <form id="quiz-form" class="mx-auto">
                             <!--Question 1-->
                             <div id="question1" class="mx-auto question">
@@ -282,7 +282,7 @@
                                     <label for="qd" class="text-center">d) Diamond</label>
                                 </div>
                                 <div class="row" class="justify-content-center">
-                                    <input type="button" value="Next"class="btn btn-success mx-auto" onclick="question9()"/>
+                                    <input type="button" value="Next"class="btn btn-success mx-auto" onclick="question10()"/>
                                 </div>
                             </div>
 
@@ -326,5 +326,8 @@
                 </div>
             </div>
         </div>
+
+        <!--My JavaScript-->
+        <script src="quizFunctions.js" type="text/javascript"></script>
     </body>
 </html>
